2006-11-06  Brady Eidson  <beidson@apple.com>

        Reviewed by Dave Harrison

        <rdar://problem/4801066>
        Added a critical null frameLoader() check

        * loader/mac/MainResourceLoaderMac.mm:
        (WebCore::MainResourceLoader::loadNow):

2006-11-06  David Harrison  <harrison@apple.com>

        Reviewed by Darin.

        <rdar://problem/4813973> Pressing delete key to remove empty quoted line leaves cursor mis-positioned

        Test:
        * editing/deleting/delete-br-012.html
        
        * editing/DeleteSelectionCommand.cpp:
        (WebCore::DeleteSelectionCommand::handleSpecialCaseBRDelete):
        Update m_endingPosition when preventing merge.
        Also removed setting of m_mergeBlocksAfterDelete when this function returns true, because is is not checked in this case.

2006-11-06  Mark Rowe  <bdash@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=11526
        Bug 11526: REGRESSION(r17610): Layout test failure in svg/custom/create-metadata-element.svg

        Update DOMNode::toString to always use className rather than preferring nodeName.

        * bindings/js/kjs_dom.cpp:
        (KJS::DOMNode::toString): Match the format returned by valueOf.

2006-11-06  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Fix RTL text in SVG to have correct positioning

        * rendering/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBox::placeBoxesHorizontally):

2006-11-06  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=11517
        REGRESSION: Flash clicks/interactivity not working properly

        * bridge/mac/FrameMac.mm:
        (WebCore::FrameMac::handleMouseMoveEvent):
        (WebCore::FrameMac::handleMouseReleaseEvent):
        Restore parts of event dispatching that were removed when fixing
        bug 7323 - just bypass those for subframes.

2006-11-05  Darin Adler  <darin@apple.com>
